--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="header__contacts">
                     <a href="tel:+74999228974" class="header__phone">+7 (499) 922-89-74</a>
-                    <button class="button">Заказать звонок</button>
+                    <button data-modal="consultation" class="button">Заказать звонок</button>
                 </div>
             </header>
 
@@ -48,7 +48,7 @@
                         на все вопросы
                     </div>
                 </div>
-                <button class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
+                <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
@@ -85,9 +85,9 @@
             <h2 class="title title_left">Получите бесплатную консультацию<br>по подбору пульсометра </h2>
             <h3 class="consultation__subheader">Просто заполните форму заявки <br>и мы перезвоним вам в течении 10 минут</h3>
             <form action="#" class="feed-form">
-                <input name="name" type="text" placeholder="Ваше имя">
-                <input name="phone" type="tel" placeholder="Ваш телефон">
-                <input name="email" type="email" placeholder="Ваше E-mail">
+                <input required name="name" type="text" placeholder="Ваше имя">
+                <input required name="phone" type="tel" placeholder="Ваш телефон">
+                <input required name="email" type="email" placeholder="Ваше E-mail">
                 <button class="button button_submit">Заказать консультацию</button>
             </form>
         </div>
@@ -148,7 +148,7 @@
                     <div class="catalog-item__wrapper">
                         <div class="catalog-item__content catalog-item__content_active">
                             <img src="img/pulsometr.png" alt="pulsometr" class="catalog-item__img">
-                            <div class="catalog-item__subtitle">Пульсометр Polar FT1</div>
+                            <div class="catalog-item__subtitle">Пульсометр Suunto M2</div>
                             <div class="catalog-item__descr">Для первых шагов в тренировках, основанных на сердечном ритме</div>
                             <a href="#" class="catalog-item__link">ПОДРОБНЕЕ</a>
                         </div>
@@ -420,6 +420,38 @@
         </div>
         <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A09432220900bedb75af35823fc7d2089c8c8be34fe508d5ec786b1f3cf4c7925&amp;source=constructor" width="100%" height="720" frameborder="0"></iframe>
     </footer>
+
+    <div class="overlay">
+        <div class="modal" id="consultation">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Просто заполните форму заявки</div>
+            <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
+            <form action="#" class="feed-form feed-form_mt25">
+                <input required name="name" type="text" placeholder="Ваше имя">
+                <input required name="phone" type="tel" placeholder="Ваш телефон">
+                <input required name="email" type="email" placeholder="Ваше E-mail">
+                <button class="button button_submit">Заказать консультацию</button>
+            </form>
+        </div>
+        
+        <div class="modal" id="order">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Ваш заказ:</div>
+            <div class="modal__descr">Пульсометр Polar FT1</div>
+            <form action="#" class="feed-form feed-form_mt25">
+                <input required name="name" type="text" placeholder="Ваше имя">
+                <input required name="phone" type="tel" placeholder="Ваш телефон">
+                <input required name="email" type="email" placeholder="Ваше E-mail">
+                <button class="button button_submit">Купить</button>
+            </form>
+        </div>
+
+        <div class="modal" id="thanks">
+            <div class="modal__close">&times;</div>
+            <div class="modal__subtitle">Спасибо за вашу заявку!</div>
+            <div class="modal__descr">Наш менеджер свяжется с вами<br> в ближайшее время!</div>
+        </div>
+    </div>
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/script.js"></script>
